add info service
